examples/failing/ExportConflictClass/A.purs
module A where

class X
